docs(CP-2A): update Codex handoff